Quartz sync: Jan 24, 2025, 11:33 AM

--- a/content/NOTES/2025-01-24.md
+++ b/content/NOTES/2025-01-24.md
@@ -62,15 +62,15 @@ in the real world, promenades act as sendoffs for graduating students in high sc
 but promenades in panprom are representative of a cyclic immortality. the process of casting off a shell through dying in combat, to then be reinstanced in a new shell
 battles being called promenades are cool. god
 certainly feels unique and shell-like
-+ there is the whole thing of prom crowns literally being coronets, and The Coronet is literally the name of the megastructure the shells are in
+there is the whole thing of prom crowns literally being coronets, and The Coronet is literally the name of the megastructure the shells are in
 PanProm! really is the perfect name for this game, just took some time for me to stumble into it lmao
 panopticon/all + promenade/prompt
 also despite the high school connotations w/ proms and shit, all shells are prompted as 18+ (though technically they are ageless since they're robots)
 the word "prom" doesn't really mean the same thing to the shells and is more of an abstract concept that has been gradually synthesized
-their “promenades” are less about the joy and excitement of finishing and more about the weight of what comes after that
+their promenades are less about the joy and excitement of finishing and more about the weight of what comes after that
 this sense of forever moving forward, forever celebrating what comes next, but they never truly reach a destination, and what comes next never truly comes because of their immortality
 if that destination is reached, it's because they no longer exist
-most shells don't have any real desire to break out of the cycle, and that awareness of the cycle just something they’ve accepted over time
-or, maybe it’s not even a fully conscious realization. more of a vague understanding that they're forever caught in this performance
+most shells don't have any real desire to break out of the cycle, and that awareness of the cycle just something they've accepted over time
+or, maybe it's not even a fully conscious realization. more of a vague understanding that they're forever caught in this performance
 i guess the whole thing is about being stuck in something that you should have grown out of or moved past long ago
 hence why the shells are all adultlike but are all stuck in this eternal promenade
