--- a/content/NOTES/2025-01-24.md
+++ b/content/NOTES/2025-01-24.md
@@ -74,3 +74,4 @@ most shells don't have any real desire to break out of the cycle, and that aware
 or, maybe it's not even a fully conscious realization. more of a vague understanding that they're forever caught in this performance
 i guess the whole thing is about being stuck in something that you should have grown out of or moved past long ago
 hence why the shells are all adultlike but are all stuck in this eternal promenade
+the shells, with all their power and agelessness, are still _caught_ in the act of becoming, without ever fully realizing what it means to actually _be_
