Quartz sync: Jan 24, 2025, 11:38 AM

--- a/content/NOTES/2025-01-24.md
+++ b/content/NOTES/2025-01-24.md
@@ -72,6 +72,8 @@ this sense of forever moving forward, forever celebrating what comes next, but t
 if that destination is reached, it's because they no longer exist
 most shells don't have any real desire to break out of the cycle, and that awareness of the cycle just something they've accepted over time
 or, maybe it's not even a fully conscious realization. more of a vague understanding that they're forever caught in this performance
+
 i guess the whole thing is about being stuck in something that you should have grown out of or moved past long ago
 hence why the shells are all adultlike but are all stuck in this eternal promenade
 the shells, with all their power and agelessness, are still _caught_ in the act of becoming, without ever fully realizing what it means to actually _be_
+the haunting realization that all the time in the world will never be enough
