Quartz sync: Jan 24, 2025, 12:23 PM

--- a/content/NOTES/2025-01-24.md
+++ b/content/NOTES/2025-01-24.md
@@ -2,6 +2,14 @@
 tags:
   - notes
 ---
+```dataview
+TABLE WITHOUT ID file.link as "Previous"
+FROM "NOTES"
+WHERE date(file.name, "yyyy-MM-dd") < date(this.file.name, "yyyy-MM-dd")
+SORT file.ctime DESC
+LIMIT 1
+```
+
 tempted to add a small amount of red somewhere in [[ELEVEN|eleven's]] design. might do it in the form of subtle component lights
 might allow for a cool cyan/red chromatic anaglyph effect too
 if her hidden eye was red.... that would be neat but maybe too on the nose lol
