Quartz sync: Jan 24, 2025, 12:53 PM

--- a/content/NOTES/2025-01-24.md
+++ b/content/NOTES/2025-01-24.md
@@ -1,14 +1,9 @@
 ---
 tags:
   - notes
+  - ep0
 ---
-```dataview
-TABLE WITHOUT ID file.link as "Previous"
-FROM "NOTES"
-WHERE date(file.name, "yyyy-MM-dd") < date(this.file.name, "yyyy-MM-dd")
-SORT file.ctime DESC
-LIMIT 1
-```
+[[<< <% tp.date.yesterday("YYYY-MM-DD") %>|Yesterday]]
 
 tempted to add a small amount of red somewhere in [[ELEVEN|eleven's]] design. might do it in the form of subtle component lights
 might allow for a cool cyan/red chromatic anaglyph effect too
