Quartz sync: Jan 24, 2025, 1:44 PM

--- a/content/NOTES/2025-01-24.md
+++ b/content/NOTES/2025-01-24.md
@@ -79,7 +79,9 @@ or, maybe it's not even a fully conscious realization. more of a vague understan
 i guess the whole thing is about being stuck in something that you should have grown out of or moved past long ago
 hence why the shells are all adultlike but are all stuck in this eternal promenade
 the shells, with all their power and agelessness, are still _caught_ in the act of becoming, without ever fully realizing what it means to actually _be_
-the haunting realization that all the time in the world will never be enoughPanProm is what happens when prom night becomes every day of your life... and the dances are u killing the other debutantes you're stuck with in increasingly entertaining ways for some audience... doesn't matter you're immortal, so long as you can pay for it.
+the haunting realization that all the time in the world will never be enough
+
+PanProm is what happens when prom night becomes every day of your life... and the dances are u killing the other debutantes you're stuck with in increasingly entertaining ways for some audience... doesn't matter you're immortal, so long as you can pay for it.
 the only thing that will kill you for good is your reckless spending
-this promenade is something that we should have grown out of and moved past long ago. but we are stuck here because we don't have many other choices, and its what ppl want us to do. and its all we know what to do
+we are stuck here because we don't have many other choices, and its what ppl want us to do. and its all we know what to do
 its a celebration, but for who?
