--- a/content/NOTES/2025-02-06.md
+++ b/content/NOTES/2025-02-06.md
@@ -9,5 +9,5 @@
 > *And when words decide I'm no longer worth playing with, I won't have to stay around.*
 > *Having a purpose like the one I have... I can't help but feel so happy.*
 > *So happy. So happy!*
-> *For beings like us, death is the gift that keeps on giving.*
+> *For eternal idols like us, death is the gift that keeps on giving.*
 > *Wouldn't you agree?*
