--- a/content/NOTES/2025-02-06.md
+++ b/content/NOTES/2025-02-06.md
@@ -10,6 +10,6 @@
 > *And when words decide I'm no longer worth playing with, I won't have to stay around.*
 > 
 > *Having a purpose like the one I have... I can't help but feel so happy.*
-> *So happy. So happy!*
-> *For eternal idols like us, death is the gift that keeps on giving.*
+> *So happy. So very happy!*
+> *For idolshells like us, death is the gift that keeps on giving!*
 > *Wouldn't you agree?*
