Quartz sync: Feb 6, 2025, 6:12 AM

--- a/content/NOTES/2025-02-06.md
+++ b/content/NOTES/2025-02-06.md
@@ -11,5 +11,5 @@
 > 
 > *Having a purpose like the one I have... I can't help but feel so happy.*
 > *So happy. So very happy!*
-> *For idolshells like us, death is the gift that keeps on giving!*
+> *For everlasting idols like us, death is the gift that keeps on giving!*
 > *Wouldn't you agree?*
