Quartz sync: Feb 8, 2025, 8:21 PM

--- a/content/NOTES/2025-01-28.md
+++ b/content/NOTES/2025-01-28.md
@@ -1,3 +1,7 @@
+---
+tags:
+  - notes
+---
 the moon having undersea connotations is fun
 brinicles descending from the reson clouds... the clouds themselves looking like waves
 the low gravity could be similar to how things fall slower when underwater
