Quartz sync: Feb 10, 2025, 5:50 AM

--- a/content/NOTES/2025-02-09.md
+++ b/content/NOTES/2025-02-09.md
@@ -47,6 +47,8 @@ they still get to perform their purpose as entertainment idols, but the context 
 they still have their distant audience of people, over on earth
 but each day that passes, they become less certain they can keep entertaining them in the same way 
 
+i imagine the coronet initially kept them in the dark about it all, settings its focus on keeping things running smoothly, until it finally became desperate enough that it started asking for help and it was very strange, because it had never talked to them before like this
+
 ---
 
 i think the shell's kind of distress is a very unique form of "fear" that involves not necessarily having their life be at risk, but them deviating from what they once fundamentally were and a overwhelming sense of anxiety about them at some point losing the ability to "go back" and do their purpose which is pretty much the reason why they exist
